--- a/components/BQ25672/CMakeLists.txt
+++ b/components/BQ25672/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "BQ25672.cpp"
                     INCLUDE_DIRS "include"
-                    REQUIRES driver esp_timer)
+                    REQUIRES esp_driver_i2c esp_timer)
